# agentic-sre-incident-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
aegis/: __init__.py  cli.py  platform.py
aegis/adapters/: __init__.py  approvers.py  fake_executor.py  file_audit_log.py  local_fixture_telemetry.py  local_runbook_store.py  memory_approval_store.py  mock_llm.py  tfidf_runbook_store.py
aegis/app/: __init__.py  approval.py  critic.py  diagnosis.py  planning.py  remediation.py  triage.py  workflow.py
aegis/domain/: __init__.py  policies.py  schemas.py
aegis/eval/: __init__.py  grader.py  harness.py
aegis/mcp/: __init__.py  gateway.py  schemas.py  server.py  tools.py
aegis/ports/: __init__.py  approval_store.py  approver.py  audit_log.py  llm.py  remediation_executor.py  runbook_store.py  telemetry.py
aegis/web/: __init__.py  panel.py
data/runbooks/: checkout-bad-deploy-rollback.md  checkout-latency-scaling.md
data/scenarios/ambiguous_telemetry/: alert.json  deployments.json  ground_truth.json  logs.jsonl  metrics.json
data/scenarios/bad_deploy/: alert.json  deployments.json  ground_truth.json  logs.jsonl  metrics.json
data/scenarios/latency_spike/: alert.json  deployments.json  ground_truth.json  logs.jsonl  metrics.json
demoapp/: __init__.py  app.py  cli.py  emit.py  faults.py
profiles/: gcp-cloud-run.yaml  local-fixtures.yaml
tests/: test_bad_deploy_e2e.py  test_demoapp_emit.py  test_eval.py
