[project]
name = "aegis-incident-copilot"
version = "0.1.0"
description = "Aegis — Agentic Incident Copilot (Milestone 1: local, CLI-first, mock-LLM)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
