[project]
name = "aegis-incident-copilot"
version = "0.1.0"
description = "Aegis, an agentic incident copilot (local, CLI-first, mock-LLM)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
demo = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]

[project.scripts]
aegis = "aegis.cli:main"
aegis-demo = "demoapp.cli:main"
aegis-mcp = "aegis.mcp.server:main"
aegis-panel = "aegis.web.panel:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*", "demoapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
